// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tree > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r0:"
  role="tree"
  tabindex="0"
/>
`;

exports[`Tree > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree custom-class-name"
  id="tree-:r0:"
  role="tree"
  style="color: white;"
  tabindex="0"
/>
`;

exports[`Tree > should handle multi-select tree behavior 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:ra:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:rb:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:rc:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-:rc:-group"
      role="group"
      style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rd:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:re:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:re:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:rf:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:rf:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:rg:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rh:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:ri:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle multi-select tree behavior 2`] = `
<ul
  aria-activedescendant="tree-item-:rc:"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:ra:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-:rb:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-:rc:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-:rc:-group"
      role="group"
      style="max-height: 0; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rd:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:re:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:re:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:rf:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:rf:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:rg:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rh:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:ri:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle multi-select tree behavior 3`] = `
<ul
  aria-activedescendant="tree-item-:rc:"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:ra:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-:rb:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-:rc:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-:rc:-group"
      role="group"
      style="max-height: 0; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rd:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:re:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:re:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:rf:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:rf:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:rg:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rh:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:ri:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle multi-select tree behavior 4`] = `
<ul
  aria-activedescendant="tree-item-:rb:"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:ra:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-list-item rmd-interaction-surface"
      id="tree-item-:rb:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-:rc:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-:rc:-group"
      role="group"
      style="max-height: 0; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rd:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:re:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:re:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:rf:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:rf:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:rg:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rh:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:ri:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle multi-select tree behavior 5`] = `
<ul
  aria-activedescendant="tree-item-:rc:"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:ra:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:rb:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-list-item rmd-interaction-surface"
      id="tree-item-:rc:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-:rc:-group"
      role="group"
      style="max-height: 0; --rmd-tree-depth: 1; padding-top: 0px; padding-bottom: 0px;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rd:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:re:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:re:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:rf:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:rf:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:rg:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rh:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:ri:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle single select tree behavior 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r1:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r2:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r3:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-:r3:-group"
      role="group"
      style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r4:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r5:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:r5:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:r6:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:r6:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:r7:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r8:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r9:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle single select tree behavior 2`] = `
<ul
  aria-activedescendant="tree-item-:r3:"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r1:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r2:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-:r3:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-:r3:-group"
      role="group"
      style="max-height: 0; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r4:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r5:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:r5:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:r6:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:r6:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:r7:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r8:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r9:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle single select tree behavior 3`] = `
<ul
  aria-activedescendant="tree-item-:r3:"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r1:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r2:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-:r3:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-:r3:-group"
      role="group"
      style="max-height: 0; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r4:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r5:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:r5:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:r6:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:r6:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:r7:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r8:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r9:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle single select tree behavior 4`] = `
<ul
  aria-activedescendant="tree-item-:r2:"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r1:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-:r2:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r3:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-:r3:-group"
      role="group"
      style="max-height: 0; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r4:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r5:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:r5:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:r6:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:r6:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:r7:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r8:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r9:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle single select tree behavior 5`] = `
<ul
  aria-activedescendant="tree-item-:r3:"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r1:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r2:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-:r3:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-:r3:-group"
      role="group"
      style="max-height: 0; --rmd-tree-depth: 1; padding-top: 0px; padding-bottom: 0px;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r4:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r5:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:r5:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:r6:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:r6:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:r7:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r8:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r9:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should render the tree item as a link if the to or href exists on the item 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r2o:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <a
      aria-selected="false"
      class="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-interaction-surface"
      href="/path-1"
      id="tree-item-:r2p:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Link 1
        </span>
      </span>
    </a>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <a
      aria-selected="false"
      class="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-interaction-surface"
      href="https://example.com"
      id="tree-item-:r2q:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Link 2
        </span>
      </span>
    </a>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-disabled="true"
      aria-selected="false"
      class="rmd-tree-item__content rmd-tree-item__content--disabled rmd-list-item rmd-list-item--disabled-color rmd-interaction-surface"
      id="tree-item-:r2r:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Link 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support conditionally rendering child trees by enabling temporaryChildItems 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r1p:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r1q:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r1r:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r1s:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support conditionally rendering child trees by enabling temporaryChildItems 2`] = `
<ul
  aria-activedescendant="tree-item-:r1r:"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r1p:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r1q:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-:r1r:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-:r1r:-group"
      role="group"
      style="max-height: 0; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r1t:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r1u:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r1v:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r1s:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support default selected and expanded ids 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:rj:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:rk:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:rl:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse"
      id="tree-item-:rl:-group"
      role="group"
      style="--rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="true"
          class="rmd-tree-item__content rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
          id="tree-item-:rm:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rn:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:rn:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:ro:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:ro:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:rp:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:rq:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:rr:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support default selected and expanded ids 2`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:rs:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:rt:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:ru:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse"
      id="tree-item-:ru:-group"
      role="group"
      style="--rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="true"
          class="rmd-tree-item__content rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
          id="tree-item-:rv:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r10:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:r10:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:r11:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:r11:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:r12:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r13:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r14:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support rendering the expander icon to the left of the item > custom expander icon 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r24:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r25:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-left"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r26:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        v
      </span>
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-:r26:-group"
      role="group"
      style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r27:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-left"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r28:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
          >
            v
          </span>
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:r28:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-left"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:r29:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
              >
                v
              </span>
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:r29:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:r2a:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r2b:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r2c:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support rendering the expander icon to the left of the item > including left icon 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r24:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r25:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media rmd-tree-item__media--single"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          folder
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-left"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r26:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
        >
          arrow_drop_down
        </span>
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          folder
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-:r26:-group"
      role="group"
      style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r27:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media rmd-tree-item__media--single"
          >
            <span
              aria-hidden="true"
              class="rmd-icon rmd-icon--font material-icons"
            >
              folder
            </span>
          </span>
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-left"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r28:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media"
          >
            <span
              aria-hidden="true"
              class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
            >
              arrow_drop_down
            </span>
            <span
              aria-hidden="true"
              class="rmd-icon rmd-icon--font material-icons"
            >
              folder
            </span>
          </span>
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:r28:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-left"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:r29:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media"
              >
                <span
                  aria-hidden="true"
                  class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
                >
                  arrow_drop_down
                </span>
                <span
                  aria-hidden="true"
                  class="rmd-icon rmd-icon--font material-icons"
                >
                  folder
                </span>
              </span>
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:r29:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:r2a:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media rmd-tree-item__media--single"
                  >
                    <span
                      aria-hidden="true"
                      class="rmd-icon rmd-icon--font material-icons"
                    >
                      folder
                    </span>
                  </span>
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r2b:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media rmd-tree-item__media--single"
          >
            <span
              aria-hidden="true"
              class="rmd-icon rmd-icon--font material-icons"
            >
              folder
            </span>
          </span>
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r2c:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media rmd-tree-item__media--single"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          folder
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support rendering the expander icon to the left of the item 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-:r24:"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r25:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-left"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r26:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        arrow_drop_down
      </span>
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-:r26:-group"
      role="group"
      style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r27:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-left"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r28:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
          >
            arrow_drop_down
          </span>
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-:r28:-group"
          role="group"
          style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-left"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-:r29:"
              role="treeitem"
              tabindex="-1"
            >
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
              >
                arrow_drop_down
              </span>
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-:r29:-group"
              role="group"
              style="max-height: 0; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-:r2a:"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-:r2b:"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-:r2c:"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;
